# GwPathfinder

./: Build.ps1  CMakeLists.txt  PathfinderCore.cpp  PathfinderCore.h  Tester.html  vcpkg.json
include/: MapArchiveLoader.h  MapDataRegistry.h  PathfinderAPI.h  PathfinderCore.h
src/: MapArchiveLoader.cpp  MapDataRegistry.cpp  PathfinderAPI.cpp  PathfinderCore.cpp  TestServer.cpp
